--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ section.home div {
   }
 
 section.about {
-    background: url("2.png") center/cover no-repeat fixed;
+    background: url("background about 2.png") center/cover no-repeat fixed;
     min-height: 600px;
     padding: 100px 30px 50px 30px;
     background-color: burlywood;
@@ -153,7 +153,7 @@ section.about img {
 }
 
 .product .breadbg1{
-    background: url("product.png") center/cover no-repeat fixed;
+    background: url("backcground product.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
@@ -257,7 +257,7 @@ section.product .breadbg1{
 }
 
 .product .breadbg2{
-    background: url(" about.png") center/cover no-repeat fixed;
+    background: url("background about.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
@@ -355,7 +355,7 @@ section.product .breadbg1{
 }
 
  .workshop{
-    background: url("workshop.png") center/cover no-repeat fixed;
+    background: url("background workshop.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
@@ -381,7 +381,7 @@ section.product .breadbg1{
     transition: 0.5s;
     margin: 10px;
     text-align: center;
-    background: url("WALLPAPER.jpg");
+    background: url("SOFT BROWN WALLPAPER.jpg"");
     text-align: justify;
     padding: 16px;
     line-height: 1.5;
@@ -413,7 +413,7 @@ section.product .breadbg1{
     transition: 0.5s;
     margin: 10px;
     text-align: center;
-    background: url("WALLPAPER.jpg");
+    background: url("SOFT BROWN WALLPAPER.jpg");
     text-align: justify;
     padding: 16px;
     line-height: 1.5;
@@ -445,7 +445,7 @@ section.product .breadbg1{
     transition: 0.5s;
     margin: 10px;
     text-align: center;
-    background: url("WALLPAPER.jpg");
+    background: url("SOFT BROWN WALLPAPER.jpg"");
     text-align: justify;
     padding: 16px;
     line-height: 1.5;
@@ -594,7 +594,7 @@ p{
     animation: goyang 0.3s;
   }
 section.contact {
-    background: url(" contact\ fix.png") center/cover no-repeat fixed;
+    background: url("background contact fix.png") center/cover no-repeat fixed;
     text-align: center;
     width: 100%;
     height: 100vh; 
