--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ section.home div {
   }
 
 section.about {
-    background: url("background\ about\ 2.png") center/cover no-repeat fixed;
+    background: url("background about 2.png") center/cover no-repeat fixed;
     min-height: 600px;
     padding: 100px 30px 50px 30px;
     background-color: burlywood;
@@ -153,7 +153,7 @@ section.about img {
 }
 
 .product .breadbg1{
-    background: url("background\ product.png") center/cover no-repeat fixed;
+    background: url("background product.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
@@ -257,7 +257,7 @@ section.product .breadbg1{
 }
 
 .product .breadbg2{
-    background: url("background\ about.png") center/cover no-repeat fixed;
+    background: url("background about.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
@@ -355,7 +355,7 @@ section.product .breadbg1{
 }
 
  .workshop{
-    background: url("background\ workshop.png") center/cover no-repeat fixed;
+    background: url("background workshop.png") center/cover no-repeat fixed;
     min-height: 750px;
     padding: 100px 30px 50px 30px;
     display: flex;
